# yew_todo_frontend

./: Cargo.toml  index.html
src/: lib.rs  main.rs  rounter.rs  router.rs  store.rs
src/api/: api_base_uri.txt  api_errors.rs  mod.rs
src/components/: mod.rs
src/components/atoms/: mod.rs  ss_button.rs  ss_link.rs  ss_text.rs  ss_text_input.rs
src/components/automs/: mod.rs  ss_links.rs
src/components/molecules/: account_form.rs  mod.rs
src/components/organisms/: navbar.rs  tasks.rs
src/pages/: create_account.rs  home.rs  login.rs  mod.rs  one_task.rs
