[package]
name = "todo_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
stylist = { version = "0.13.0", features = ["parser", "yew"]}
wasm-bindgen = "0.2.80"
wasm-bindgen-futures= "0.4.30"
web-sys = {version = "0.3.57", features = ["HtmlInputElement"]}
reqwasm = "0.5.0"
serde = "1.0.136"
serde_json = "1.0.79"
yewdux = "0.10.0"
# -- console log
gloo = "0.11.0"
thiserror = "1.0.30"